# mdoc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  audit1.md  flow.md  mdoc_codex_prompt.json  mdoc_codex_prompt.md  pyproject.toml  task_gemini.md
.github/workflows/: ci.yml
example/: aggregated_readme_example.md  leaves_readme_example.md
mdoc/: cli.py
